Added some on digital visual acuity charts, related work

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -1,4 +1,4 @@
- \documentclass[12pt,a4paper,notitlepage]{report}
+\documentclass[12pt,a4paper,notitlepage]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{cite}
 \usepackage{etoolbox}
@@ -68,7 +68,8 @@ Several different versions of visual acuity chart exist today. The ETDRS (Early 
 \caption{The Snellen chart \\ (Source: http://en.wikipedia.org/wiki/Snellen\_chart).} \label{fig:snellen_chart}
 \end{figure} 
 
-\subsection{Digitial visual acuity charts}
+\subsection{Digital visual acuity charts}
+Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus} are two applications supposed to display a visual acuity chart on a digital screen. Both applications are computer applications, which requires the computer to be connected to the screen. The companies behind the products provide very little information and the exact specifications of the charts are not available.
 
 \subsection{Media streaming devices}
 
