--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -72,6 +72,7 @@ Several different versions of visual acuity chart exist today. The ETDRS (Early 
 Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus} are two applications supposed to display a visual acuity chart on a digital screen. Both applications are computer applications, which requires the computer to be connected to the screen. The companies behind the products provide very little information and the exact specifications of the charts are not available.
 
 \subsection{Media streaming devices}
+Several media streaming devices exists that allow digital content to be received and displayed on a connected screen. Examples of such devices are Chromecast \cite{chromecast} and Apple TV \cite{appletv} which you can plug into a TV and allows you to view images or watch movies that are stored on your phone or computer. Both applications also allows developers to develop their own applications to display custom content but requires the developer to enter an agreement with respective company.
 
 \subsection{Axanivis}
 
