Ändrat lite på references.
URL visas nu, men inget datum

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -642,8 +642,10 @@ Skriva om att använda typ chromecast istället
 \item constraints to random function
 \end{itemize}
 
-\bibliography{references}{}
-\bibliographystyle{ieeetr}
+%\bibliography{references}{}
+\bibliography{IEEEabrv,references}
+%\bibliographystyle{ieeetr}
+\bibliographystyle{IEEEtran}
 
 \newpage
 \appendix
