fixed spelling error

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -71,7 +71,7 @@
 
 @online{android_design,
 	author= {{Google, Inc}},
-	title = {Android Desing Principles},
+	title = {Android Design Principles},
   	year = 2015,
   	url = {http://developer.android.com/design/get-started/principles.html},
   	urldate = {2015-05-22}
