--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -623,8 +623,11 @@ Attempt	&	failures	&	succeses	\\
 %\begin{figure}[ht!]
 %\end{figure}
 
+\chapter{Conclusion}
 
-\chapter{Discussion}
+\section{Discussion}
+Even though the system turned out as intended, there is a lot left to do until it can be used clinically. First of all, the system must be tested for more bugs and unintended behavior. This should preferably be done by other users than the developers since the developers know how the system works and can't safely predict what another user will attempt to do. Then, after all found bugs have been removed, the system must be tested by experts in the field of ophthalmology in order to make sure that the built system actually is a valid solution. This will also give credibility to the system.
+
 \section{Advantages of a digital system}
 The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to carry away the old chart and then carrying back a new. This will save both time and space as only one screen and a small Android device is necessary. This system will also allow the visual acuity tests to take place in rooms that previously where too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
 
