Lagt till på future work

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -638,12 +638,9 @@ A disadvantage with this system is that digital screens become very expensive at
 Skriva om att använda typ chromecast istället
 
 \section{Future Work}
-\begin{itemize}
-\item grating
-\item color blind tests
-\item change logmar
-\item constraints to random function
-\end{itemize}
+Future work will include more charts and features for the system. One such feature is the grating acuity test, which allows testing of visual acuity on very young children or people with difficulties communicating \cite{PGSoderbergOral}. Another feature is to include the option to, instead of changing the size of the optotypes, change the LogMAR, so the top row doesn't necessarily start at 1.0 LogMAR. This will allow the chart to use the entire monitors screen no matter the distance from the patient to the screen.
+
+Other charts to be included could be, for example, charts using the Landholt C, charts for testing color blindness or charts used for testing astigmatism. The random function for the charts should be improved, as it currently have no constraints whatsoever. These constraints would make sure that the same optotype, or to similar optotypes like \textit{C} and \textit{O}, won't be repeated to many times in a row.
 
 %\bibliography{references}{}
 \bibliography{IEEEabrv,references}
