Lagt till på future work

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -533,7 +533,7 @@ The user can also choose which chart size, \textit{Large}, \textit{Medium} or \t
 
 The last setting the user can choose is the distance setting. Here the user can enter the distance a patient is from the screen, in centimeters, and then press \textit{Apply Distance}. This has no visible effect on the application but is used to set the optotype sizes on the monitor.
 
-%\subsection{Server}
+\subsection{Server}
 
 \subsection{Known bugs and issues}
 Even though the system fulfills the requirements, it doesn't mean it's bug free. If the network is unstable or slow, the server can react several seconds later than the Android application. This can cause a user to repeat an action which will, in the end, result in the server acting on on both actions. In the case that the connection gets broken, all actions performed will be ignored by the server, even after reconnecting. In this case, the user can change to another chart size or version and then back again to resolve the issue.
