--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -11,7 +11,7 @@
   	title = {AndroidSVG},
   	year = {2015},
   	url = {https://code.google.com/p/androidsvg/},
-  	urldate = {2015-05-11}
+  	note = {visited on 2015-05-11}
 }
 
 @online{Batik,
@@ -19,7 +19,7 @@
   	title = {Batik SVG Toolkit},
   	year = {2015},
   	url = {https://xmlgraphics.apache.org/batik/},
-  	urldate = {2015-05-11}
+  	note = {visited on 2015-05-11}
 }
 
 @online{JavaFX_8,
@@ -27,14 +27,14 @@
   title = {JavaFX: Getting Started with JavaFX},
   year = {2014},
   url = {https://docs.oracle.com/javase/8/javafx/get-started-tutorial/jfx-overview.htm},
-  urldate = {2015-04-28}
+  note = {visited on 2015-04-28}
 }
 
 @online{Java_Swing,
   author = {Amy Fowler},
   title = {A Swing Architecture Overview},
   url = {http://www.oracle.com/technetwork/java/architecture-142923.html},
-  urldate = {2015-04-28}
+  note = {visited on 2015-04-28}
 }
 
 @online{digitaleyechart,
@@ -42,7 +42,7 @@
   title = {Digital Eye Chart},
   year = 2015,
   url = {http://digitaleyechart.com/},
-  urldate = {2015-04-27}
+  note = {visited on 2015-04-27}
 }
 
 @online{ichartplus,
@@ -50,7 +50,7 @@
   title = {iChartPlus},
   year = 2015,
   url = {http://ichartplus.com/},
-  urldate = {2015-04-27}
+  note = {visited on 2015-04-27}
 }
 
 @online{appletv,
@@ -58,7 +58,7 @@
   title = {Apple TV},
   year = 2015,
   url = {https://www.apple.com/se/appletv/},
-  urldate = {2015-04-27}
+  note = {visited on 2015-04-27}
 }
 
 @online{chromecast,
@@ -66,7 +66,7 @@
   title = {Chromecast},
   year = 2015,
   url = {https://www.google.se/chrome/devices/chromecast/},
-  urldate = {2015-04-27}
+ note = {visited on 2015-04-27}
 }
 
 @online{android_design,
@@ -74,12 +74,12 @@
 	title = {Android Design Principles},
   	year = 2015,
   	url = {http://developer.android.com/design/get-started/principles.html},
-  	urldate = {2015-05-22}
+  	note = {visited on 2015-05-22}
 
 @online{Kryonet,
   title = {Kryonet},
   url = {https://www.openhub.net/p/kryonet},
-  urldate = {2015-04-27}
+ note = {visited on 2015-04-27}
 }
 
 @article{Colenbrander,
@@ -112,6 +112,7 @@ distance than 6 m}
 
 @misc{PGSoderbergOral,
 author = {Söderberg, PG.}
+note = {Ophthalmology, Dept. of neuroscience, Uppsala University }
 }
 
 
