--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -534,6 +534,26 @@ The user can also choose which chart size, \textit{Large}, \textit{Medium} or \t
 The last setting the user can choose is the distance setting. Here the user can enter the distance a patient is from the screen, in centimeters, and then press \textit{Apply Distance}. This has no visible effect on the application but is used to set the optotype sizes on the monitor.
 
 \subsection{Server}
+The server application is in many cases very similar to the Android application. Both uses the same methods for the calculations, such as the optotype sizes. The charts are built using the same logic as the Android application with minor changes due to the fact that Java's Swing components, and not Androids components, have to be drawn. The monitor connected to the server only displays the currently chosen chart (fig. \ref{fig:server_charts}) and nothing else, such as LogMAR values or settings shown on the Android device.
+
+\begin{figure}[ht!]
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  %\includegraphics[width=.5\linewidth]{images/etdrs_top.png}
+  \includegraphics[width=60mm]{images/servergui/etdrs_chart.png}
+  \caption{The large ETDRS chart}
+  \label{fig:server_large}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=60mm]{images/servergui/etdrs_single_row.png}
+  \caption{The medium ETDRS chart}
+  \label{fig:server_medium}
+\end{subfigure}
+\caption{Example of charts as shown on the monitor connected to the server}
+\label{fig:server_charts}
+\end{figure}
 
 \subsection{Known bugs and issues}
 Even though the system fulfills the requirements, it doesn't mean it's bug free. If the network is unstable or slow, the server can react several seconds later than the Android application. This can cause a user to repeat an action which will, in the end, result in the server acting on on both actions. In the case that the connection gets broken, all actions performed will be ignored by the server, even after reconnecting. In this case, the user can change to another chart size or version and then back again to resolve the issue.
