--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -95,13 +95,19 @@ distance than 6 m}
 }
 
 @article{Ferris,
-  author = {Ferris III L, Kassoff A, Bresnick H, Bailey I},
-  title = {New visual acuity charts for clinical research}
+  author = {Ferris III, L and Kassoff, A and Bresnick, H and Bailey, I},
+  title = {New visual acuity charts for clinical research},
+  journal = {American Journal of Ophthalmology},
+  year = {1982},
+  volume = {94}
 }
 
 @article{Bailey,
-  author = {Bailey I, Lovie J},
-  title = {Design Principles for Visual Acuity Letter Charts}
+  author = {Bailey, I and Lovie, J},
+  title = {Design Principles for Visual Acuity Letter Charts},
+  journal = {American Journal of Optometry \& Physiological Optics},
+  year = {1976},
+  volume = {53}
 }
 
 @article{vision_loss,
@@ -111,8 +117,10 @@ distance than 6 m}
 }
 
 @misc{PGSoderbergOral,
-author = {Söderberg, PG.}
-note = {Ophthalmology, Dept. of neuroscience, Uppsala University }
+author = "{Söderberg, PG.}",
+title = {Ophthalmology},
+note = { Dept. of neuroscience, Uppsala University },
+year = {2015}
 }
 
 
