--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -93,20 +93,20 @@ Several media streaming devices exists that allow digital content to be received
 %Most of the before mentioned systems have some form of negative side that we try to improve on, mostly problems about high cost and difficulties with extending the software. We are different with that we want to create a system that is cheap, easy to understand and easy to maintain. Creating a system that have all the previously mentioned sides is one of the goals we have. Another important goal is creating a system that really is speacialized on measurements of visual acuity. All these points are important to give the users the best experience.
 
 \section{Purpose}
-Having an efficient and accurate system for testing is important in any kind of environment. Especially in one that handles visual testing where an unaccurate test can result in possible injuries of some sorts. Therefore it is important to have a well-built background and accurate information. With the help of Professor Per Söderberg as our expert in the field we will try to create this system and on the way there talk about different problems that can arise. 
+Having efficient and accurate systems is important in a medical environment. Especially in a medical environment that handles tests where unaccurate our false results in some cases can cause accidents. Therefore it is important to have a well-built system that mitigates these problems. With the help of Professor Per Söderberg as our expert in the field of ophthalmology we will try to create a system that will act as a prototype for further future work. 
 
-To solve the problems with this system the Department of Neuroscience have performed tests using a digital screen to present the charts instead of using a printed medium. This means the optician can have many more variations on the charts at disposal. 
+Accuracy is not the only important aspect to think of when implementing a system. It is also important to think about expanding and improving on how the system can be used. To introduce new functionality that will make the life of the system's user a lot more simple and efficient is one of those important improvements. 
 
-The goal of this project is to take the system used for these tests and develop an implementation of said system with several advantages over the testing system, such as:
+These are a few of the aspects that we will to build a system around. A simple system that implements digital eye charts has already been built, though that system is not as sophisticated or extendable as needed. We will base some of our system's content upon how this other system is built. Mostly this will be using the layouts of the charts already created since those charts have been shown to work. 
+
+Using this other system as a ground for our own we build a system that:
 
 \begin{itemize}
-	\item An application for the tablet with an improved user interface, both aesthetically and functionally.
-	\item Controlling the server over WiFi using the tablet, meaning the optician can move around the room more easily.
-	\item Altering the scale of the rendered symbols so that the patient can be closer or further away from the.
-	\item Being able to tailor the testing process to the patient by changing the sets of symbols displayed or removing clutter from the charts.
+	\item Has an application for the Android tablet with an improved user interface, both esthetically and functionally.
+	\item Controls a server that renders the eye charts on a screen over WiFi using the Android tablet.
+	\item Can alter the scale of the rendered symbols so that the patient can be closer or further away from the screen.
+	\item Has functionality to tailor the testing process by, among a few things, changing the sets of symbols displayed or removing clutter from the charts.
 \end{itemize}
-	
-and other features to make the process easier for the optician and patient.
 
 \section{Motivation}
 Determining visual acuity is a very labor- and equipment-intensive process and it is not going to stop being so. More and more people are experiencing eye problems. \cite{vision_loss} Handling printed charts is slow and not as accurate as is needed. On the other hand, a digital screen has increased functionality, accuracy and efficiency. A digitalization also gives the user a greater possibility for extending the usage of the system, including adding new charts and optotypes. 
